ckanext/mapstore/theme/public/css/mapstore.css
/*body {
        width: 500px;
}*/

#mapstore-preview{
	margin: 0 auto;
}

.show{
-moz-border-bottom-colors: none;
-moz-border-left-colors: none;
-moz-border-right-colors: none;
-moz-border-top-colors: none;
background-color: #F7F7F7;
background-image: linear-gradient(to bottom, #505050, #505050);
background-repeat: repeat-x;
border-color: #CCCCCC #CCCCCC #B3B3B3;
border-image: none;
border-radius: 4px;
border-style: solid;
border-width: 1px;
box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
color: #333333;
cursor: pointer;
display: inline-block;
font-size: 14px;
line-height: 20px;
margin-bottom: 0;
padding: 4px 12px;
text-align: center;
text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
vertical-align: middle;
}

.show-primary {
  background-color: #505050;
  /*background-image: linear-gradient(to bottom, #30778D, #085871);*/
  background-repeat: repeat-x;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  color: #FFFFFF;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

a {
  color: #187794;
  text-decoration: none;
}

.show, label {
  font-weight: bold;
}

.show-btn{
	float: right;
	margin-bottom:10px;
}

